* configure.in (mingw): needs $(DEFFILE) for extension libraries.   [ruby-core:27946]
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26467 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/configure.in
+++ b/configure.in
@@ -2181,6 +2181,8 @@ AS_CASE(["$target_os"],
 		LIBRUBY_SO='$(RUBY_SO_NAME)'.dll
 		LIBRUBY_DLDFLAGS="${LIBRUBY_DLDFLAGS}"' $(RUBYDEF)'
 	    fi
+	    EXPORT_PREFIX=' '
+	    DLDFLAGS="${DLDFLAGS}"' $(DEFFILE)'
 	    AC_LIBOBJ([win32])
 	    COMMON_LIBS=m
 #	    COMMON_MACROS="WIN32_LEAN_AND_MEAN="
