* configure.in, win32/Makefile.sub (EXECUTABLE_EXTS): should be   space-separated.  [ruby-core:27912]
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26468 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/configure.in
+++ b/configure.in
@@ -2092,6 +2092,7 @@ AC_SUBST(ARCHFILE)
 if test "$EXEEXT" = .exe; then
     EXECUTABLE_EXTS='".exe",".com",".cmd",".bat"'
     AC_DEFINE_UNQUOTED(EXECUTABLE_EXTS, $EXECUTABLE_EXTS)
+    EXECUTABLE_EXTS=`echo $EXECUTABLE_EXTS | tr -d '"' | tr , ' '`
     AC_SUBST(EXECUTABLE_EXTS)
 fi
 
