--- a/configure.in
+++ b/configure.in
@@ -1918,6 +1918,12 @@ AS_CASE(["$target_os"],
   [nextstep* | openstep* | rhapsody* | darwin*], [
 	STRIP='strip -A -n'])
 
+AC_ARG_WITH(ext,
+            AC_HELP_STRING([--with-ext=EXTS],
+                           [pass to --with-ext option of extmk.rb]))
+AC_ARG_WITH(out-ext,
+            AC_HELP_STRING([--with-out-ext=EXTS],
+                           [pass to --without-ext option of extmk.rb]))
 EXTSTATIC=
 AC_SUBST(EXTSTATIC)dnl
 AC_ARG_WITH(static-linked-ext,
