* configure.in (RSHIFT): add parenthesis to supress warning.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26769 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/configure.in
+++ b/configure.in
@@ -1341,9 +1341,9 @@ AC_CACHE_CHECK(whether right shift preserve sign bit, rb_cv_rshift_sign,
 	rb_cv_rshift_sign=yes,
 	rb_cv_rshift_sign=no)])
 if test "$rb_cv_rshift_sign" = yes; then
-  AC_DEFINE(RSHIFT(x,y), ((x)>>(int)y))
+  AC_DEFINE(RSHIFT(x,y), ((x)>>((int)y)))
 else
-  AC_DEFINE(RSHIFT(x,y), (((x)<0) ? ~((~(x))>>y) : (x)>>y))
+  AC_DEFINE(RSHIFT(x,y), (((x)<0) ? ~((~(x))>>(y)) : (x)>>(y)))
 fi
 
 AC_MSG_CHECKING(read count field in FILE structures)
