--- a/win32/Makefile.sub
+++ b/win32/Makefile.sub
@@ -481,21 +481,28 @@ $(CONFIG_H): $(MKFILES) $(srcdir)/win32/Makefile.sub $(win_srcdir)/Makefile.sub
 #define rb_uid_t int
 #define HAVE_STRUCT_STAT_ST_RDEV 1
 #define HAVE_ST_RDEV 1
+#define HAVE_INT8_T 1
 #define int8_t signed char
 #define HAVE_UINT8_T 1
 #define uint8_t unsigned char
+#define SIZEOF_INT8_T 1
 #define HAVE_INT16_T 1
 #define int16_t short
 #define HAVE_UINT16_T 1
 #define uint16_t unsigned short
+#define SIZEOF_INT16_T 2
 #define HAVE_INT32_T 1
 #define int32_t int
 #define HAVE_UINT32_T 1
 #define uint32_t unsigned int
-#define HAVE_INT64_T HAVE_LONG_LONG
+#define SIZEOF_INT32_T 4
+!if $(MSC_VER) >= 1400
+#define HAVE_INT64_T 1
 #define int64_t __int64
-#define HAVE_UINT64_T HAVE_LONG_LONG
+#define HAVE_UINT64_T 1
 #define uint64_t unsigned __int64
+#define SIZEOF_INT64_T 8
+!endif
 #define HAVE_INTPTR_T 1
 #define HAVE_UINTPTR_T 1
 #define HAVE_SSIZE_T 1
