--- a/configure.in
+++ b/configure.in
@@ -1708,27 +1708,27 @@ if test "$with_dln_a_out" != yes; then
 			rb_cv_dlopen=yes],
 	[sysv4*], [	: ${LDSHARED='ld -G'}
 			rb_cv_dlopen=yes],
-        [nto-qnx*], [	: ${LDSHARED="qcc -shared"}
-                        rb_cv_dlopen=yes],
+	[nto-qnx*], [	: ${LDSHARED='$(CC) -shared'}
+			rb_cv_dlopen=yes],
 	[esix*|uxpds*], [ : ${LDSHARED="ld -G"}
 			rb_cv_dlopen=yes],
 	[osf*], [	: ${LDSHARED="ld -shared -expect_unresolved \"*\""}
 			rb_cv_dlopen=yes],
 	[bsdi3*], [	AS_CASE(["$CC"],
-			[*shlicc*], [	: ${LDSHARED="$CC -r"}
+			[*shlicc*], [	: ${LDSHARED='$(CC) -r'}
 					rb_cv_dlopen=yes])],
 	[linux* | gnu* | k*bsd*-gnu | netbsd* | bsdi* | kopensolaris*-gnu], [
-			: ${LDSHARED='${CC} -shared'}
+			: ${LDSHARED='$(CC) -shared'}
 			if test "$rb_cv_binary_elf" = yes; then
 			    LDFLAGS="$LDFLAGS -Wl,-export-dynamic"
 			fi
 			rb_cv_dlopen=yes],
-	[interix*], [	: ${LDSHARED="$CC -shared"}
+	[interix*], [	: ${LDSHARED='$(CC) -shared'}
 			XLDFLAGS="$XLDFLAGS -Wl,-E"
 			LIBPATHFLAG=" -L%1\$-s"
 			rb_cv_dlopen=yes],
 	[freebsd*|dragonfly*], [
-			: ${LDSHARED="$CC -shared"}
+			: ${LDSHARED='$(CC) -shared'}
 			if test "$rb_cv_binary_elf" = yes; then
 			    LDFLAGS="$LDFLAGS -rdynamic"
 			    DLDFLAGS="$DLDFLAGS "'-Wl,-soname,$(.TARGET)'
@@ -1736,18 +1736,18 @@ if test "$with_dln_a_out" != yes; then
 			  test "$GCC" = yes && test "$rb_cv_prog_gnu_ld" = yes || LDSHARED="ld -Bshareable"
 			fi
 			rb_cv_dlopen=yes],
-	[openbsd*], [	: ${LDSHARED="\$(CC) -shared ${CCDLFLAGS}"}
+	[openbsd*], [	: ${LDSHARED='$(CC) -shared ${CCDLFLAGS}'}
 			if test "$rb_cv_binary_elf" = yes; then
 			    LDFLAGS="$LDFLAGS -Wl,-E"
 			fi
 			rb_cv_dlopen=yes],
-	[nextstep*], [	: ${LDSHARED='cc -r -nostdlib'}
+	[nextstep*], [	: ${LDSHARED='$(CC) -r -nostdlib'}
 			LDFLAGS="$LDFLAGS -u libsys_s"
 			rb_cv_dlopen=yes],
-	[openstep*], [	: ${LDSHARED='cc -dynamic -bundle -undefined suppress'}
+	[openstep*], [	: ${LDSHARED='$(CC) -dynamic -bundle -undefined suppress'}
 			: ${LDFLAGS=""}
 			rb_cv_dlopen=yes],
-	[rhapsody*], [	: ${LDSHARED='cc -dynamic -bundle -undefined suppress'}
+	[rhapsody*], [	: ${LDSHARED='$(CC) -dynamic -bundle -undefined suppress'}
 			: ${LDFLAGS=""}
 			rb_cv_dlopen=yes],
 	[darwin*], [	: ${LDSHARED='$(CC) -dynamic -bundle'}
@@ -1812,13 +1812,13 @@ if test "$with_dln_a_out" != yes; then
 			LDFLAGS="$LDFLAGS -L/lib -L/usr/lib -L/usr/local/lib"
 			rb_cv_dlopen=yes],
 	[cygwin*|mingw*], [
-			: ${LDSHARED="${CC} -shared "'$(if $(filter-out -g -g0,$(debugflags)),,-s)'}
+			: ${LDSHARED='$(CC) -shared $(if $(filter-out -g -g0,$(debugflags)),,-s)'}
 			XLDFLAGS="$XLDFLAGS -Wl,--stack,0x00200000,--enable-auto-import"
 			DLDFLAGS="${DLDFLAGS} -Wl,--enable-auto-image-base,--enable-auto-import"
 			: ${LIBPATHENV=""}
 			rb_cv_dlopen=yes],
 	[hiuxmpp], [	: ${LDSHARED='ld -r'}],
-	[atheos*], [	: ${LDSHARED="$CC -shared"}
+	[atheos*], [	: ${LDSHARED='$(CC) -shared'}
 			rb_cv_dlopen=yes],
 	[os2-emx*], [	LDFLAGS="$LDFLAGS -Zomf"
 			],
@@ -2559,6 +2559,8 @@ AC_SUBST(BUILTIN_TRANSOBJS)
 PACKAGE=$RUBY_BASE_NAME
 AC_SUBST(PACKAGE)
 AC_MSG_RESULT($PACKAGE library version = $ruby_version)
+
+AS_CASE([" $CPP "], [*" $CC "*], [CPP=`echo " $CPP " | sed "s| $CC |"' $(CC) |;s/^ *//;s/  *$//'`])
 
 AC_CONFIG_FILES($FIRSTMAKEFILE)
 AC_CONFIG_FILES(Makefile, [{
