* template/fake.rb.in: hooks for extconf.rb.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27234 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/Makefile.in
+++ b/Makefile.in
@@ -163,8 +163,9 @@ $(LIBRUBY_SO):
 				$(LIBRUBY_ALIASES) || true
 
 fake: $(arch)-fake.rb
-$(arch)-fake.rb: config.status
+$(arch)-fake.rb: config.status $(srcdir)/template/fake.rb.in
 		@./config.status --file=$@:$(srcdir)/template/fake.rb.in
+		@chmod +x $@
 
 Makefile:	$(srcdir)/Makefile.in $(srcdir)/enc/Makefile.in
 
