Fix previous commit.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@27245 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/configure.in
+++ b/configure.in
@@ -2618,7 +2618,10 @@ AC_CONFIG_FILES(Makefile, [{
 	fi
 	sed '/^MISSING/s/\$U\././g;/^VCS *=/s#@VCS@#'"$VCS"'#;/^VCSUP *=/s#@VCSUP@#'"$VCSUP"'#' Makefile
 	echo; test x"$EXEEXT" = x || echo 'miniruby: miniruby$(EXEEXT)'
-	test "$RUBY_INSTALL_NAME$EXEEXT" = ruby || echo 'ruby: $(PROGRAM);'
+	test "$RUBY_INSTALL_NAME$EXEEXT" = "$(RUBY_BASE_NAME)" ||
+	  test "$RUBY_BASE_NAME" = "" ||
+	  test "$RUBY_BASE_NAME" = "ruby" ||
+	  echo 'ruby: $(PROGRAM)'
 	if test "$gnumake" != yes; then
 	    echo ['$(MKFILES): $(srcdir)/common.mk']
 	    sed ['s/{\$([^(){}]*)[^{}]*}//g'] ${srcdir}/common.mk
