--- a/configure.in
+++ b/configure.in
@@ -2618,18 +2618,16 @@ AC_CONFIG_FILES(Makefile, [{
 	fi
 	sed '/^MISSING/s/\$U\././g;/^VCS *=/s#@VCS@#'"$VCS"'#;/^VCSUP *=/s#@VCSUP@#'"$VCSUP"'#' Makefile
 	echo; test x"$EXEEXT" = x || echo 'miniruby: miniruby$(EXEEXT)'
-	test "$RUBY_INSTALL_NAME$EXEEXT" = "$(RUBY_BASE_NAME)" ||
-	  test "$RUBY_BASE_NAME" = "" ||
-	  test "$RUBY_BASE_NAME" = "ruby" ||
-	  echo 'ruby: $(PROGRAM)'
 	if test "$gnumake" != yes; then
 	    echo ['$(MKFILES): $(srcdir)/common.mk']
 	    sed ['s/{\$([^(){}]*)[^{}]*}//g'] ${srcdir}/common.mk
 	else
 	    echo 'distclean-local::; @$(RM) GNUmakefile uncommon.mk'
 	fi
-    } > confmk$$.tmp && mv -f confmk$$.tmp Makefile],
-[RUBY_INSTALL_NAME='$RUBY_INSTALL_NAME' EXEEXT='$EXEEXT' gnumake='$gnumake'])
+    } > confmk$$.tmp && mv -f confmk$$.tmp Makefile &&
+	${MAKE-make} info-program | grep '^PROGRAM=ruby$' > /dev/null ||
+	echo 'ruby: $(PROGRAM);' >> Makefile],
+[EXEEXT='$EXEEXT' gnumake='$gnumake'])
 AC_OUTPUT
 dnl }
 dnl }
