--- a/configure.in
+++ b/configure.in
@@ -2154,6 +2154,7 @@ if test "$install_doc" != no; then
     RDOCTARGET="rdoc"
 else
     RDOCTARGET="nodoc"
+    CAPITARGET="nodoc"
 fi
 AC_SUBST(RDOCTARGET)
 
